--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
-API_ID=12345
-API_HASH=esx576f8738x883f3sfzx83
-BOT_TOKEN=55838383:yourtbottokenhere
-BIN_CHANNEL=-100
+API_ID=27588098
+API_HASH=90396dabbcd7e916b86e2d75f4d85858
+BOT_TOKEN=6835856806:AAGKfoIwoNE2QazDvu28-_0ZtlFXun0nJGM
+BIN_CHANNEL=-1002084197674
 PORT=8080
 FQDN=your_server_ip
-OWNER_ID=your_user_id
-DATABASE_URL=mongodb_uri
+OWNER_ID=1501578652
+DATABASE_URL=mongodb+srv://mrxbd:<Aaaaaa1.>@cluster0.cz8ja0g.mongodb.net/?retryWrites=true&w=majority
